Update notebooks for experiments service

--- a/tensorflow/notebooks/PyTorch/mnist_differential_evolution.ipynb
+++ b/tensorflow/notebooks/PyTorch/mnist_differential_evolution.ipynb
@@ -7,43 +7,15 @@
     "# Simple PyTorch example\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 0.3.0</h3></font>\n",
-    "<font color='red'> <h3>Tested with torchvision 0.2.0</h3></font>"
+    "<font color='red'> <h3>Tested with pytorch 0.4.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with torchvision 0.2.1</h3></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>13</td><td>application_1522241157877_0014</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0:8088/proxy/application_1522241157877_0014/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0:8042/node/containerlogs/container_e01_1522241157877_0014_01_000001/testproj__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pytorch_mnist(epochs, lr, momentum):\n",
     "    import argparse\n",
@@ -60,9 +32,6 @@
     "    \n",
     "    batch_size = 64    \n",
     "    test_batch_size = 1000    \n",
-    "    epochs = 10\n",
-    "    lr = 0.01    \n",
-    "    momentum = 0.5    \n",
     "    cuda = devices.get_num_gpus() > 0\n",
     "    seed = 1\n",
     "    log_interval = 10\n",
@@ -171,12 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define hyperparameter search space\n",
-    "args = {'epochs': [1, 20], 'lr': [0.005, 0.05], 'momentum': [0.1, 0.9]}"
+    "args = {'epochs': [1, 5], 'lr': [0.005, 0.05], 'momentum': [0.1, 0.9]}"
    ]
   },
   {
@@ -187,7 +156,7 @@
    "source": [
     "from hops import experiment\n",
     "# Run differential evolution with default parameters\n",
-    "experiment.evolutionary_search(spark, pytorch_mnist, args)"
+    "experiment.evolutionary_search(spark, pytorch_mnist, args, name='pytorch mnist diff evo')"
    ]
   }
  ],
