--- a/tensorflow/notebooks/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb
@@ -7,7 +7,7 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.8</h3></font>\n",
     "\n",
     "In this notebook we are going to master running Deep Learning code on Hops using Jupyter notebooks and HopsFS, the highly efficient distributed file system that Hops provides. HopsFS is a fork of Apache HDFS and operations for reading and writing files to HopsFS is the same as with HDFS that TensorFlow supports.\n",
     "For more information about how to read from HDFS, please see: https://www.tensorflow.org/deploy/hadoop\n",
@@ -102,7 +102,7 @@
     "    from hops import hdfs\n",
     "\n",
     "    # Training Parameters\n",
-    "    num_steps = 200\n",
+    "    num_steps = 100\n",
     "    batch_size = 128\n",
     "\n",
     "    # Network Parameters\n",
@@ -260,14 +260,18 @@
     "        eval_hooks=[summary_hook]\n",
     "    )\n",
     "\n",
-    "    experiment.train_and_evaluate()\n"
+    "    experiment.train_and_evaluate()\n",
+    "    \n",
+    "    accuracy_score = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)[\"accuracy\"]\n",
+    "    \n",
+    "    return accuracy_score\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hyperparameter search using `grid_params` method <a class=\"anchor\" id='hyperparam'></a>\n",
+    "## Hyperparameter search <a class=\"anchor\" id='hyperparam'></a>\n",
     "\n",
     "Hyperparameter optimization is critical to achieve the best accuracy for your model. With Hops, hyperparameter optimization is easier than ever.  We can find the best hyperparameters to train the model and make it easy to find the best set of hyper parameters by visualizing them in TensorBoard for you.\n",
     "\n",
@@ -276,12 +280,6 @@
     "```python\n",
     "# Arguments to use in training\n",
     "args_dict = {'learning_rate': [0.001, 0.0005, 0.0001], 'dropout': [0.45, 0.7]}\n",
-    "```\n",
-    "\n",
-    "Next step is to generate all possible combinations, the grid, of the hyperparameters.\n",
-    "```python\n",
-    "# Create a grid with the specified arguments\n",
-    "args_dict_grid = util.grid_params(args_dict)\n",
     "```\n",
     "\n",
     "So in effect, this is interpreted as that you want to run your TensorFlow code with 6 different hyperparameter combinations as shown in the table.\n",
@@ -305,15 +303,8 @@
    },
    "outputs": [],
    "source": [
-    "from hops import util\n",
-    "\n",
     "#Define dict for hyperparameters\n",
-    "args_dict = {'learning_rate': [0.001, 0.0005, 0.0001], 'dropout': [0.45, 0.7]}\n",
-    "\n",
-    "# Generate a grid for the given hyperparameters\n",
-    "args_dict_grid = util.grid_params(args_dict)\n",
-    "\n",
-    "print(args_dict_grid)"
+    "args_dict = {'learning_rate': [0.001, 0.0005, 0.0001], 'dropout': [0.45, 0.7]}"
    ]
   },
   {
@@ -322,7 +313,7 @@
    "source": [
     "## Running the training using `experiment` module <a class=\"anchor\" id='starting'></a>\n",
     "\n",
-    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a single function called `launch`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `experiment.launch` will simply run the wrapper function and inject the value of each hyperparameter that you have specified. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
+    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a function called `grid_search`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `experiment.grid_search` will simply create the grid of the arguments specified, run the wrapper function and inject the value of each hyperparameter. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
    ]
   },
   {
@@ -332,8 +323,13 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
+    "from hops import hdfs\n",
     "\n",
-    "tensorboard_hdfs_logdir = experiment.launch(spark, wrapper, args_dict_grid)"
+    "notebook = hdfs.project_path() + \"Jupyter/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb\"\n",
+    "experiment.grid_search(spark, wrapper, args_dict, direction='max',\n",
+    "                       name='fashion mnist grid search', \n",
+    "                       description='Demonstration of running gridsearch hyperparameter optimization with fashion mnist',\n",
+    "                       versioned_resources=[notebook])"
    ]
   },
   {
@@ -394,49 +390,6 @@
     "## Increasing throughput - Running jobs in parallel <a class=\"anchor\" id='parallel'></a>\n",
     "The default configuration is to run each job sequentially, so each one of the 6 hyperparameter configuration is run sequentially. It is possible to increase the number of jobs that can be executed at any time by increasing the value of the configuration property shown in the picture below. To do this you need to restart Jupyter, by navigating back to HopsWorks and shutting it down.\n",
     "![parallel.png](../../images/parallel.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualizing TensorBoard events from previous runs <a class=\"anchor\" id='visualize'></a>\n",
-    "\n",
-    "Visualize all TensorBoard events for the jobs in the same TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hops import tensorboard\n",
-    "\n",
-    "tensorboard.visualize(spark, tensorboard_hdfs_logdir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![image12-TensorboardAgg.png](../../images/visualize.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Moving on from here: Scaling out with TensorFlowOnSpark and Horovod"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We walked through how to run one of most popular deep learning architectures, Cifar-10 dataset on hops using hops `hdfs` and `tensorboard` utility modules. \n",
-    "\n",
-    "Next step is to reduce training time by training the model in parallel. We covered in-depth tutorials about different parallelization concepts in the other notebooks. "
    ]
   }
  ],
