--- a/tensorflow/notebooks/TensorFlow/cnn/minimal_mnist_classifier_on_hops.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/minimal_mnist_classifier_on_hops.ipynb
@@ -7,7 +7,7 @@
     "# Minimal mnist example on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.8</h3></font>"
    ]
   },
   {
@@ -46,11 +46,11 @@
     "        x={\"x\": input(mnist.train)[0]},\n",
     "        y=input(mnist.train)[1],\n",
     "        num_epochs=None,\n",
-    "        batch_size=50,\n",
+    "        batch_size=128,\n",
     "        shuffle=True\n",
     "    )\n",
     "\n",
-    "    classifier.train(input_fn=train_input_fn, steps=100000)\n",
+    "    classifier.train(input_fn=train_input_fn, steps=500)\n",
     "\n",
     "    # Define the test inputs\n",
     "    test_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
@@ -62,7 +62,9 @@
     "\n",
     "    # Evaluate accuracy\n",
     "    accuracy_score = classifier.evaluate(input_fn=test_input_fn)[\"accuracy\"]\n",
-    "    print(\"\\nTest Accuracy: {0:f}%\\n\".format(accuracy_score*100))"
+    "    print(\"\\nTest Accuracy: {0:f}%\\n\".format(accuracy_score*100))\n",
+    "    \n",
+    "    return accuracy_score"
    ]
   },
   {
@@ -72,8 +74,13 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
+    "from hops import hdfs\n",
     "# Simply run it\n",
-    "experiment.launch(spark, mnist)"
+    "notebook = hdfs.project_path() + \"/Jupyter/TensorFlow/minimal_mnist_classifier_on_hops.ipynb\"\n",
+    "experiment.launch(spark, mnist, \n",
+    "                  name='mnist estimator', \n",
+    "                  description='A minimal mnist example with two hidden layers',\n",
+    "                  versioned_resources=[notebook])"
    ]
   }
  ],
