--- a/tensorflow/notebooks/TensorFlowOnSpark/mnist_estimator.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/mnist_estimator.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "  # Create the Estimator\n",
     "  mnist_classifier = tf.estimator.Estimator(\n",
-    "      model_fn=cnn_model_fn, model_dir=os.getcwd())\n",
+    "      model_fn=cnn_model_fn, model_dir=tensorboard.logdir())\n",
     "\n",
     "  # Set up logging for predictions\n",
     "  # Log the values in the \"Softmax\" tensor with label \"probabilities\"\n",
@@ -179,11 +179,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.context import SparkContext\n",
-    "from pyspark.conf import SparkConf\n",
-    "from tensorflowonspark import TFCluster\n",
     "from hops import util\n",
+    "from hops import experiment\n",
+    "from hops import hdfs\n",
     "import argparse\n",
+    "TFCluster = experiment.TFCluster\n",
     "\n",
     "sc = spark.sparkContext\n",
     "num_executors = util.num_executors(spark)\n",
@@ -193,11 +193,12 @@
     "parser.add_argument(\"--batch_size\", help=\"number of records per batch\", type=int, default=100)\n",
     "parser.add_argument(\"--cluster_size\", help=\"number of nodes in the cluster\", type=int, default=num_executors)\n",
     "parser.add_argument(\"--num_ps\", help=\"number of PS nodes in cluster\", type=int, default=num_ps)\n",
-    "parser.add_argument(\"--steps\", help=\"maximum number of steps\", type=int, default=100000)\n",
+    "parser.add_argument(\"--steps\", help=\"maximum number of steps\", type=int, default=5000)\n",
     "args = parser.parse_args()\n",
     "print(\"args:\", args)\n",
-    "\n",
-    "cluster = TFCluster.run(sc, main, args, args.cluster_size, args.num_ps, tensorboard=False, input_mode=TFCluster.InputMode.TENSORFLOW, log_dir=None, master_node='master')\n",
+    "notebook = hdfs.project_path() + \"/Jupyter/TensorFlowOnSpark/mnist_estimator.ipynb\"\n",
+    "cluster = TFCluster.run(sc, main, args, args.cluster_size, args.num_ps, input_mode=TFCluster.InputMode.TENSORFLOW, \n",
+    "                        log_dir=None, master_node='master', name='mnist estimator', versioned_resources=[notebook])\n",
     "cluster.shutdown()"
    ]
   }
