--- a/tensorflow/notebooks/Serving/train_and_export_model.ipynb
+++ b/tensorflow/notebooks/Serving/train_and_export_model.ipynb
@@ -7,7 +7,7 @@
     "# Train and export TensorFlow Serving model\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.8</h3></font>\n",
     "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
    ]
   },
@@ -119,8 +119,6 @@
     "    print 'Done exporting!'\n",
     "\n",
     "    serving.export(export_path, \"mnist\", 1)\n",
-    "    \n",
-    "wrapper()\n",
     "\n",
     "from hops import experiment\n",
     "\n",
@@ -130,21 +128,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-demo_tensorflow_admin000__meb10000",
-   "language": "python",
-   "name": "python-demo_tensorflow_admin000__meb10000"
+   "display_name": "PySpark",
+   "language": "",
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 2
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "pyspark",
+   "pygments_lexer": "python2"
   }
  },
  "nbformat": 4,
