Point path to hops.tensorflowonspark

--- a/tensorflow/notebooks/TensorFlowOnSpark/mnist.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/mnist.ipynb
@@ -107,7 +107,7 @@
     "        print(\"%d: \" %worker_num)\n",
     "        print(arg)\n",
     "\n",
-    "    from tensorflowonspark import TFNode\n",
+    "    from hops.tensorflowonspark import TFNode\n",
     "    from datetime import datetime\n",
     "    import getpass\n",
     "    import math\n",
