[HOPSWORKS-627] Update notebooks to TF 1.10

--- a/tensorflow/notebooks/Horovod/launch_horovod.ipynb
+++ b/tensorflow/notebooks/Horovod/launch_horovod.ipynb
@@ -83,8 +83,8 @@
    "source": [
     "# Uncomment one of the notebooks below to run it\n",
     "\n",
-    "#allreduce.launch(spark, horovod_hdfs_examples_folder + 'cifar10.ipynb', name='cifar10')\n",
-    "#allreduce.launch(spark, horovod_hdfs_examples_folder + 'keras_mnist.ipynb', name='keras mnist', local_logdir=True)\n",
+    "#experiment.horovod(spark, horovod_hdfs_examples_folder + 'cifar10.ipynb', name='cifar10')\n",
+    "#experiment.horovod(spark, horovod_hdfs_examples_folder + 'keras_mnist.ipynb', name='keras mnist', local_logdir=True)\n",
     "experiment.horovod(spark, horovod_hdfs_examples_folder + 'mnist_estimator.ipynb', name='mnist estimator')"
    ]
   },
