--- a/tensorflow/notebooks/Serving/serving_client.ipynb
+++ b/tensorflow/notebooks/Serving/serving_client.ipynb
@@ -7,7 +7,7 @@
     "# Simple TensorFlow Serving python client\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
     "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
    ]
   },
@@ -38,7 +38,7 @@
     "work_dir=os.getcwd()\n",
     "\n",
     "# You need to fill this in (look in serving UI)\n",
-    "server=\"ip:port\"\n",
+    "server=\"host:port\"\n",
     "\n",
     "\n",
     "class _ResultCounter(object):\n",
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
