--- a/tensorflow/notebooks/Serving/train_and_export_model.ipynb
+++ b/tensorflow/notebooks/Serving/train_and_export_model.ipynb
@@ -7,7 +7,7 @@
     "# Train and export TensorFlow Serving model\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.8</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
     "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
    ]
   },
@@ -118,8 +118,15 @@
     "\n",
     "    print 'Done exporting!'\n",
     "\n",
-    "    serving.export(export_path, \"mnist\", 1)\n",
-    "\n",
+    "    serving.export(export_path, \"mnist\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from hops import experiment\n",
     "\n",
     "experiment.launch(spark, wrapper, name='mnist serving example')"
