--- a/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "<h1>Deep Convolutional GAN (DCGAN) and Image Reconstruction using MNIST</h1>\n",
     "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
+    "\n",
     "<h1>Authors</h1>\n",
     "\n",
     "<ul>\n",
@@ -389,17 +391,6 @@
     "from hops import experiment\n",
     "\n",
     "tensorboard_hdfs_logdir = experiment.launch(spark, wrapper, args_dict_grid, name='mnist gan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hops import tensorboard\n",
-    "\n",
-    "tensorboard.visualize(spark, tensorboard_hdfs_logdir)"
    ]
   },
   {
