--- a/tensorflow/notebooks/TensorFlowOnSpark/mnist_estimator.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/mnist_estimator.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# TensorFlowOnSpark: Estimator example\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n"
    ]
   },
   {
