--- a/tensorflow/notebooks/End_to_End_DL_Pipeline/Step3_Model_Training_Parallel_Experiments.ipynb
+++ b/tensorflow/notebooks/End_to_End_DL_Pipeline/Step3_Model_Training_Parallel_Experiments.ipynb
@@ -1344,7 +1344,7 @@
     "             \"lr_decay_mode\" : [\"poly\", \"steps\"],\n",
     "            \"wdecay\":[0.00001, 0.001], \"mom\":[0.80, 1]} #hyperparameters to tune\n",
     "# evolutionary search through the space of hyperparameters using genetic algorithms\n",
-    "logdir, best_param_dict = experiment.evolutionary_search(spark, main, args_dict, generations=20, population=15, direction=\"max\", cleanup_generations=True)"
+    "logdir, best_param_dict = experiment.evolutionary_search(main, args_dict, generations=20, population=15, direction=\"max\", cleanup_generations=True)"
    ]
   },
   {
@@ -1403,7 +1403,7 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, main)"
+    "experiment.launch(main)"
    ]
   },
   {
