--- a/tensorflow/notebooks/End_to_End_DL_Pipeline/Step4.0_Horovod_Launch.ipynb
+++ b/tensorflow/notebooks/End_to_End_DL_Pipeline/Step4.0_Horovod_Launch.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "experiment.horovod(spark, HOROVOD_NOTEBOOK, name='tinyimagenet resnet estimator', local_logdir = False)"
+    "experiment.horovod(HOROVOD_NOTEBOOK, name='tinyimagenet resnet estimator', local_logdir = False)"
    ]
   },
   {
