--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "## Running the training using `experiment` module <a class=\"anchor\" id='starting'></a>\n",
     "\n",
-    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a function called `grid_search`. As arguments it simply takes the `spark` SparkSession object, which is automatically created when the first cell is evaluated in the notebook, in addition to the wrapper function and the dictionary with the hyperparameters. `experiment.grid_search` will simply create the grid of the arguments specified, run the wrapper function and inject the value of each hyperparameter. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
+    "The last, and arguably most important module that we demonstrate from the `hops` module is called `experiment`. The `experiment` module provides a function called `grid_search`. As arguments it simply takes the wrapper function and the dictionary with the hyperparameters. `experiment.grid_search` will simply create the grid of the arguments specified, run the wrapper function and inject the value of each hyperparameter. Assuming that you started Jupyter with the default configuration, each job will be run sequentially. To increase throughput by running two or more jobs in parallel, please see [this](#parallel)."
    ]
   },
   {
@@ -326,7 +326,7 @@
     "from hops import hdfs\n",
     "\n",
     "notebook = hdfs.project_path() + \"Jupyter/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb\"\n",
-    "experiment.grid_search(spark, wrapper, args_dict, direction='max',\n",
+    "experiment.grid_search(wrapper, args_dict, direction='max',\n",
     "                       name='fashion mnist grid search', \n",
     "                       description='Demonstration of running gridsearch hyperparameter optimization with fashion mnist',\n",
     "                       versioned_resources=[notebook])"
