--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/cnn/minimal_mnist_classifier_on_hops.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/cnn/minimal_mnist_classifier_on_hops.ipynb
@@ -77,7 +77,7 @@
     "from hops import hdfs\n",
     "# Simply run it\n",
     "notebook = hdfs.project_path() + \"/Jupyter/TensorFlow/cnn/minimal_mnist_classifier_on_hops.ipynb\"\n",
-    "experiment.launch(spark, mnist, \n",
+    "experiment.launch(mnist, \n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
     "                  versioned_resources=[notebook])"
