--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/debug/TensorBoard_debugger.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/debug/TensorBoard_debugger.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, wrapper, name='tensorboard debugger', local_logdir=True)"
+    "experiment.launch(wrapper, name='tensorboard debugger', local_logdir=True)"
    ]
   },
   {
