--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/eager/Mnist_gan.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/eager/Mnist_gan.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, mnist_eager_gan, name='eager mnist gan')"
+    "experiment.launch(mnist_eager_gan, name='eager mnist gan')"
    ]
   }
  ],
