--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/gan/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/gan/mnist_gan_reconstruction.ipynb
@@ -390,7 +390,7 @@
    "source": [
     "from hops import experiment\n",
     "\n",
-    "tensorboard_hdfs_logdir = experiment.launch(spark, wrapper, args_dict_grid, name='mnist gan')"
+    "tensorboard_hdfs_logdir = experiment.launch(wrapper, args_dict_grid, name='mnist gan')"
    ]
   },
   {
