--- a/tensorflow/notebooks/Serving/train_and_export_model.ipynb
+++ b/tensorflow/notebooks/Serving/train_and_export_model.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "from hops import experiment\n",
     "\n",
-    "experiment.launch(spark, wrapper, name='mnist serving example')"
+    "experiment.launch(wrapper, name='mnist serving example')"
    ]
   }
  ],
