update notebooks for Experiment, Parallel Experiments and Distributed Training abstractions

--- a/tensorflow/notebooks/End_to_End_DL_Pipeline/Step3_Model_Training_Parallel_Experiments.ipynb
+++ b/tensorflow/notebooks/End_to_End_DL_Pipeline/Step3_Model_Training_Parallel_Experiments.ipynb
@@ -46,8 +46,7 @@
     "- pydoop: 2.0a3\n",
     "- tensorboard: 1.8.0\n",
     "- tensorflow: 1.8.0\n",
-    "- tensorflow-gpu: 1.8.0\n",
-    "- tfspark: 1.3.5"
+    "- tensorflow-gpu: 1.8.0"
    ]
   },
   {
@@ -56,24 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import pydoop.hdfs as py_hdfs\n",
-    "from hops import hdfs\n",
-    "import numpy as np\n",
-    "from builtins import range\n",
-    "from tensorflow.python.ops import data_flow_ops\n",
-    "from tensorflow.contrib.data.python.ops import interleave_ops\n",
-    "from tensorflow.contrib.data.python.ops import batching\n",
-    "import os\n",
-    "import sys\n",
-    "import time\n",
-    "import argparse\n",
-    "import random\n",
-    "import shutil\n",
-    "import logging\n",
-    "import re\n",
-    "from glob import glob\n",
-    "from operator import itemgetter"
+    "from hops import hdfs"
    ]
   },
   {
@@ -1119,6 +1101,26 @@
     "    \"\"\"\n",
     "    import hops\n",
     "    print(\"hopsversion: {}\".format(hops.__version__))\n",
+    "    \n",
+    "    import tensorflow as tf\n",
+    "    import pydoop.hdfs as py_hdfs\n",
+    "    from hops import hdfs\n",
+    "    import numpy as np\n",
+    "    from builtins import range\n",
+    "    from tensorflow.python.ops import data_flow_ops\n",
+    "    from tensorflow.contrib.data.python.ops import interleave_ops\n",
+    "    from tensorflow.contrib.data.python.ops import batching\n",
+    "    import os\n",
+    "    import sys\n",
+    "    import time\n",
+    "    import argparse\n",
+    "    import random\n",
+    "    import shutil\n",
+    "    import logging\n",
+    "    import re\n",
+    "    from glob import glob\n",
+    "    from operator import itemgetter\n",
+    "    \n",
     "    data_dir = INPUT_DIR # Path to dataset in TFRecordsFormat \n",
     "    batch_size=100 # Size of each minibatch per GPU\n",
     "    num_epochs=50 # Number of epochs to run\n",
@@ -1483,13 +1485,6 @@
     "\n",
     "![tensorboard8.png](./../images/tensorboard8.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
