--- a/tensorflow/notebooks/Filesystem/HopsFSOperations.ipynb
+++ b/tensorflow/notebooks/Filesystem/HopsFSOperations.ipynb
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "hdfs.cp(\"Resources/test5.txt\", \"Logs/\")\n",
+    "hdfs.cp(\"Resources/test.txt\", \"Logs/\")\n",
     "logs_files = hdfs.ls(\"Logs/\")\n",
     "print(logs_files)"
    ]
