--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Hyperparameter_search_cifar10.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Hyperparameter_search_cifar10.ipynb
@@ -68,8 +68,8 @@
     "    batch_size = 32\n",
     "    stride = 1\n",
     "    num_steps = 2000\n",
-    "    filters = 78\n",
-    "    kernel = 5\n",
+    "    filters = 42\n",
+    "    kernel = 4\n",
     "\n",
     "    # Network Parameters\n",
     "    num_input = 32*32*3 # CIFAR10 data input (img shape: 32*32*3)\n",
@@ -268,7 +268,7 @@
     "|:-------------:|:---------------------------------------------------------------------------------------:|\n",
     "|  direction    |  direction to optimize, 'max' or 'min'                                                  |\n",
     "|  generations  |  number of generations (how long to search)                                             |\n",
-    "|  popsize      |  population per generation, the more hyperparameters the larger population              |\n",
+    "|  population      |  population per generation, the more hyperparameters the larger population              |\n",
     "|  mutation     |  mutation rate to explore more different hyperparameter configuration                   |\n",
     "|  crossover    |  how much generated hyperparameter combinations should adapt to current best combination|"
    ]
@@ -288,7 +288,7 @@
    "source": [
     "from hops import experiment\n",
     "\n",
-    "tensorboard_hdfs_logdir = experiment.evolutionary_search(spark, wrapper, boundary_dict, direction='max', popsize=10, generations=3, crossover=0.7, mutation=0.5, name='cifar10 differential evolution')"
+    "tensorboard_hdfs_logdir = experiment.evolutionary_search(wrapper, boundary_dict, direction='max', population=10, generations=3, crossover=0.7, mutation=0.5, name='cifar10 differential evolution')"
    ]
   },
   {
@@ -306,15 +306,30 @@
    "source": [
     "## Visualizing generations and hyperparameters using TensorBoard <a class=\"anchor\" id='visualize'></a>\n",
     "\n",
-    "TensorBoard provides a regex expression which can be used to easily filter out runs for each generation. The TensorBoard logdir for each generation will be put in a folder with the name generation{number}, where number corresponds to the number of the generation starting from 0. The best hyperparameter combinations are expected to appear in the later generations. Navigate to the Experiments service to visualize the generations in TensorBoard.\n",
+    "TensorBoard provides a regex expression which can be used to easily filter out runs for each generation. The TensorBoard logdir for each generation will be put in a folder with the name generation{number}, where number corresponds to the number of the generation starting from 0. The best hyperparameter combinations are expected to appear in the later generations.\n",
+    "\n",
+    "## Monitoring execution - TensorBoard <a class=\"anchor\" id='tensorboard'></a>\n",
+    "To find the TensorBoard for the execution, please go back to HopsWorks and enter the Experiments service.\n",
+    "Then copy & paste the experiment_id into the textbox and press enter to start a TensorBoard to see all experiments being run in parallel.\n",
+    "\n",
+    "![Image7-Monitor.png](../../../images/experiments_service.png)\n",
+    "\n",
+    "![Image7-Monitor.png](../../../images/tensorboard.png)\n",
     "\n",
     "### Generation 0\n",
-    "![Image1-Tensorboard.png](../../images/generation0.png)\n",
+    "![Image1-Tensorboard.png](../../../images/generation0.png)\n",
     "### Generation 1\n",
-    "![Image2-Tensorboard.png](../../images/generation1.png)\n",
+    "![Image2-Tensorboard.png](../../../images/generation1.png)\n",
     "### Generation 2\n",
-    "![Image3-Tensorboard.png](../../images/generation2.png)"
+    "![Image3-Tensorboard.png](../../../images/generation2.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
