--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/grid_search/Grid_search_fashion_mnist.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/grid_search/Grid_search_fashion_mnist.ipynb
@@ -69,7 +69,7 @@
     "project_path = hdfs.project_path()\n",
     "```\n",
     "\n",
-    "![image11-Dataset-ProjectPath.png](../../images/datasets.png)"
+    "![image11-Dataset-ProjectPath.png](../../../images/datasets.png)"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/TensorFlow/cnn/Grid_search_fashion_mnist.ipynb\"\n",
+    "notebook = hdfs.project_path() + \"Jupyter/Parallel_Experiments/TensorFlow/grid_search/Grid_search_fashion_mnist.ipynb\"\n",
     "experiment.grid_search(wrapper, args_dict, direction='max',\n",
     "                       name='fashion mnist grid search', \n",
     "                       description='Demonstration of running gridsearch hyperparameter optimization with fashion mnist',\n",
@@ -337,28 +337,10 @@
    "metadata": {},
    "source": [
     "## Monitoring execution - TensorBoard <a class=\"anchor\" id='tensorboard'></a>\n",
-    "To find the TensorBoard for the execution, please go back to HopsWorks and follow the arrows in the images below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image7-Monitor.png](../../images/jupyter.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image4-LaunchTensorboard.png](../../images/overview.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image8-Tensorboard.png](../../images/tensorboard.png)"
+    "To find the TensorBoard for the execution, please go back to HopsWorks and enter the Experiments service.\n",
+    "Then copy & paste the experiment_id into the textbox and press enter to start a TensorBoard to see all experiments being run in parallel.\n",
+    "![Image7-Monitor.png](../../../images/experiments_service.png)\n",
+    "![Image7-Monitor.png](../../../images/tensorboard.png)"
    ]
   },
   {
@@ -373,14 +355,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image6-GoToLogs.png](../../images/logs.png)"
+    "![Image6-GoToLogs.png](../../../images/logs.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image9-Logs.png](../../images/viewlogs.png)"
+    "![Image9-Logs.png](../../../images/viewlogs.png)"
    ]
   },
   {
@@ -389,7 +371,7 @@
    "source": [
     "## Increasing throughput - Running jobs in parallel <a class=\"anchor\" id='parallel'></a>\n",
     "The default configuration is to run each job sequentially, so each one of the 6 hyperparameter configuration is run sequentially. It is possible to increase the number of jobs that can be executed at any time by increasing the value of the configuration property shown in the picture below. To do this you need to restart Jupyter, by navigating back to HopsWorks and shutting it down.\n",
-    "![parallel.png](../../images/parallel.png)"
+    "![parallel.png](../../../images/parallel.png)"
    ]
   }
  ],
