--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/grid_search/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/grid_search/mnist_gan_reconstruction.ipynb
@@ -402,17 +402,17 @@
     "<h3>Image generation using DCGAN</h3>\n",
     "\n",
     "Random images generated after 20 epochs.\n",
-    "![Image7-Monitor.png](../../images/final_grid.jpg)\n",
+    "![Image7-Monitor.png](../../../images/final_grid.jpg)\n",
     "<p>After training the algorithm for <b>20 epochs</b> the generator was able to generate images very similar to our training data. The time required to train this model for 20 epochs is about 3 days on a single CPU and 1 hour on a GPU.\n",
     "<br/>\n",
     "<br/>\n",
     "We can see the <b>generator and the discriminator losses</b> evaluated on the validation set every 100 iteration. (On the y axis we have the loss while on the x axis we have the iteration number, and every 550 iteration correspond to 1 epoch since we use a batch size of 100 and the training dataset consists of 55000 images).<br/><br/>\n",
     "    \n",
-    "![Image7-Monitor.png](../../images/DCGAN_Mnist_tensorboard_scalars_50kIter.jpg)\n",
+    "![Image7-Monitor.png](../../../images/DCGAN_Mnist_tensorboard_scalars_50kIter.jpg)\n",
     "<br/>\n",
     "We can also observe that the generator starts to generate quite good images after few iteration and then it try to continue to improve the images with a lot of <b>oscillations without converging to a fixed solution</b>. We can observe how the generated images evolve at each epoch. (Note that at epoch 7 the generated images are random pixels even if before we collected images similar to numbers and after the generator start again to generate good images). The following image shows the 10 epochs image generation process. <br/><br/>\n",
     "\n",
-    "![Image7-Monitor.png](../../images/gif_speed_low.gif)\n",
+    "![Image7-Monitor.png](../../../images/gif_speed_low.gif)\n",
     "\n",
     "<br/>\n",
     "Finally we did <b>hyperparameter tuning</b> and we obtained the following results:\n",
@@ -431,9 +431,9 @@
     "In the following figure, we can see the results of these reconstruction, in the first column there is the image before the pixels were deleted, in the second column the masked image and in the third the reconstructed image.\n",
     "<br/>\n",
     "\n",
-    "![Image7-Monitor.png](../../images/res.jpg)\n",
+    "![Image7-Monitor.png](../../../images/res.jpg)\n",
     "<br/>\n",
-    "![Image7-Monitor.png](../../images/center.gif)\n",
+    "![Image7-Monitor.png](../../../images/center.gif)\n",
     "<br/>"
    ]
   },
