--- a/tensorflow/notebooks/Experiment/TensorFlow/TensorBoard_debugger.ipynb
+++ b/tensorflow/notebooks/Experiment/TensorFlow/TensorBoard_debugger.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wrapper():\n",
+    "def debugger_example():\n",
     "    # Copyright 2016 The TensorFlow Authors. All Rights Reserved.\n",
     "    #\n",
     "    # Licensed under the Apache License, Version 2.0 (the \"License\");\n",
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, wrapper, name='tensorboard debugger', local_logdir=True)"
+    "experiment.launch(debugger_example, name='tensorboard debugger', local_logdir=True)"
    ]
   },
   {
