--- a/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Mnist_gan.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/TensorFlow/evolutionary_search/Mnist_gan.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mnist_eager_gan():\n",
+    "def mnist_eager_gan(lr, noise):\n",
     "\n",
     "    \"\"\"A deep MNIST classifier using convolutional layers.\n",
     "    Sample usage:\n",
@@ -39,8 +39,6 @@
     "    \n",
     "    data_dir = os.getcwd()\n",
     "    log_interval = 20\n",
-    "    noise = 100\n",
-    "    lr = 0.001\n",
     "    batch_size = 128\n",
     "\n",
     "\n",
@@ -252,6 +250,9 @@
     "                  'Average Discriminator Loss: %.6f' %\n",
     "                  (batch_index, total_generator_loss / batch_index,\n",
     "                   total_discriminator_loss / batch_index))\n",
+    "            \n",
+    "        return total_discriminator_loss / batch_index\n",
+    "\n",
     "\n",
     "\n",
     "    def main(_):\n",
@@ -288,11 +289,12 @@
     "      # Restore variables on creation if a checkpoint exists.\n",
     "      checkpoint.restore(latest_cpkt)\n",
     "\n",
+    "      avg_gen_loss=None\n",
     "      with tf.device(device):\n",
     "        for _ in range(100):\n",
     "          start = time.time()\n",
     "          with summary_writer.as_default():\n",
-    "            train_one_epoch(dataset=dataset, log_interval=log_interval,\n",
+    "            avg_gen_loss = train_one_epoch(dataset=dataset, log_interval=log_interval,\n",
     "                            noise_dim=noise, **model_objects)\n",
     "          end = time.time()\n",
     "          checkpoint.save(checkpoint_prefix)\n",
@@ -304,11 +306,13 @@
     "                (checkpoint.save_counter.numpy(),\n",
     "                 checkpoint.step_counter.numpy(),\n",
     "                 end - start))\n",
+    "      return avg_gen_loss\n",
     "\n",
     "\n",
     "    tfe.enable_eager_execution()\n",
     "\n",
-    "    tf.app.run(main=main, argv=[sys.argv[0]])"
+    "    tf.app.run(main=main, argv=[sys.argv[0]])\n",
+    "    return avg_gen_loss"
    ]
   },
   {
@@ -318,7 +322,8 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, mnist_eager_gan, name='eager mnist gan')"
+    "search_dict = {'lr': [0.01, 0.0001], 'noise': [50, 200]}\n",
+    "experiment.evolutionary_search(mnist_eager_gan, search_dict, name='eager mnist gan')"
    ]
   }
  ],
